--- a/figures/japanese/comparison.tex
+++ b/figures/japanese/comparison.tex
@@ -6,22 +6,22 @@ block/.style = {draw, fill=blue!30, align=center, anchor=west,
 ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
 \node[rectangle,text width=1.2cm,anchor=base] (A0) at (1,-0.3) {Real};
 \node[rectangle,text width=0.9cm,anchor=base] (B0) at (4,-0.3) {Optimized};
-\node[rectangle,text width=1.2cm,anchor=base] (A1) at (1,-1.0) {DERIV};
-\node[rectangle,text width=1.2cm,anchor=base] (A2) at (1,-1.5) {VAL};
-\node[rectangle,text width=1.2cm,anchor=base] (A3) at (1,-2.0) {VOICE/MOOD};
-\node[rectangle,text width=1.2cm,anchor=base] (A4) at (1,-2.5) {MOOD};
-\node[rectangle,text width=1.2cm,anchor=base] (A5) at (1,-3.0) {POLITENESS};
-\node[rectangle,text width=1.2cm,anchor=base] (A6) at (1,-3.5) {POLARITY};
-\node[rectangle,text width=1.2cm,anchor=base] (A7) at (1,-4.0) {TAM};
-\node[rectangle,text width=1.2cm,anchor=base] (A8) at (1,-4.5) {FIN};
-\node[rectangle,text width=1.2cm,anchor=base] (B1) at (4,-1.0) {DERIV};
-\node[rectangle,text width=1.2cm,anchor=base] (B2) at (4,-1.5) {VAL};
-\node[rectangle,text width=1.2cm,anchor=base] (B3) at (4,-2.0) {VOICE/MOOD};
-\node[rectangle,text width=1.2cm,anchor=base] (B4) at (4,-2.5) {MOOD};
-\node[rectangle,text width=1.2cm,anchor=base] (B5) at (4,-3.0) {POLITENESS};
-\node[rectangle,text width=1.2cm,anchor=base] (B6) at (4,-3.5) {TAM};
-\node[rectangle,text width=1.2cm,anchor=base] (B7) at (4,-4.0) {POLARITY};
-\node[rectangle,text width=1.2cm,anchor=base] (B8) at (4,-4.5) {FIN};
+\node[rectangle,text width=1.2cm,anchor=base] (A1) at (1,-1.0) {Derivation};
+\node[rectangle,text width=1.2cm,anchor=base] (A2) at (1,-1.5) {Valence};
+\node[rectangle,text width=1.2cm,anchor=base] (A3) at (1,-2.0) {Voice/Mood};
+\node[rectangle,text width=1.2cm,anchor=base] (A4) at (1,-2.5) {Mood};
+\node[rectangle,text width=1.2cm,anchor=base] (A5) at (1,-3.0) {Politeness};
+\node[rectangle,text width=1.2cm,anchor=base] (A6) at (1,-3.5) {Polarity};
+\node[rectangle,text width=1.2cm,anchor=base] (A7) at (1,-4.0) {Tense/Aspect};
+\node[rectangle,text width=1.2cm,anchor=base] (A8) at (1,-4.5) {Finiteness};
+\node[rectangle,text width=1.2cm,anchor=base] (B1) at (4,-1.0) {Derivation};
+\node[rectangle,text width=1.2cm,anchor=base] (B2) at (4,-1.5) {Valence};
+\node[rectangle,text width=1.2cm,anchor=base] (B3) at (4,-2.0) {Voice/Mood};
+\node[rectangle,text width=1.2cm,anchor=base] (B4) at (4,-2.5) {Mood};
+\node[rectangle,text width=1.2cm,anchor=base] (B5) at (4,-3.0) {Politeness};
+\node[rectangle,text width=1.2cm,anchor=base] (B6) at (4,-3.5) {Tense/Aspect};
+\node[rectangle,text width=1.2cm,anchor=base] (B7) at (4,-4.0) {Polarity};
+\node[rectangle,text width=1.2cm,anchor=base] (B8) at (4,-4.5) {Finiteness};
 \draw[->] (A1.east) to (B1.west);
 \draw[->] (A2.east) to (B2.west);
 \draw[->] (A3.east) to (B3.west);
