--- a/figures/finnish_verbs/comparison.tex
+++ b/figures/finnish_verbs/comparison.tex
@@ -9,9 +9,9 @@ ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
 \node[rectangle,text width=1.2cm,anchor=base] (A1) at (1,-1.0) {Voice};
 \node[rectangle,text width=1.2cm,anchor=base] (A2) at (1,-1.5) {Tense};
 \node[rectangle,text width=1.2cm,anchor=base] (A3) at (1,-2.0) {Mood};
-\node[rectangle,text width=1.2cm,anchor=base] (A4) at (1,-2.5) {Person.Number};
+\node[rectangle,text width=1.2cm,anchor=base] (A4) at (1,-2.5) {Agreement};
 \node[rectangle,text width=1.2cm,anchor=base] (A5) at (1,-3.0) {Clitic};
-\node[rectangle,text width=1.2cm,anchor=base] (B1) at (4,-1.0) {Person.Number};
+\node[rectangle,text width=1.2cm,anchor=base] (B1) at (4,-1.0) {Agreement};
 \node[rectangle,text width=1.2cm,anchor=base] (B2) at (4,-1.5) {Voice};
 \node[rectangle,text width=1.2cm,anchor=base] (B3) at (4,-2.0) {Tense};
 \node[rectangle,text width=1.2cm,anchor=base] (B4) at (4,-2.5) {Mood};
