--- a/figures/japanese/comparison-opt-uni.tex
+++ b/figures/japanese/comparison-opt-uni.tex
@@ -12,14 +12,14 @@ ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
 \node[rectangle,text width=1.2cm,anchor=base] (A4) at (4,-2.5) {Tense};
 \node[rectangle,text width=1.2cm,anchor=base] (A5) at (4,-3.0) {Mood};
 \node[rectangle,text width=1.2cm,anchor=base] (A6) at (4,-3.5) {Agreement};
-\node[rectangle,text width=1.2cm,anchor=base] (B1) at (1,-1.0) {DERIV};
-\node[rectangle,text width=1.2cm,anchor=base] (B2) at (1,-1.5) {VAL};
-\node[rectangle,text width=1.2cm,anchor=base] (B3) at (1,-2.0) {VOICE/MOOD};
-\node[rectangle,text width=1.2cm,anchor=base] (B4) at (1,-2.5) {MOOD};
-\node[rectangle,text width=1.2cm,anchor=base] (B5) at (1,-3.0) {POLITENESS};
-\node[rectangle,text width=1.2cm,anchor=base] (B6) at (1,-3.5) {TAM};
-\node[rectangle,text width=1.2cm,anchor=base] (B7) at (1,-4.0) {POLARITY};
-\node[rectangle,text width=1.2cm,anchor=base] (B8) at (1,-4.5) {FIN};
+\node[rectangle,text width=1.2cm,anchor=base] (B1) at (1,-1.0) {Derivation};
+\node[rectangle,text width=1.2cm,anchor=base] (B2) at (1,-1.5) {Valence};
+\node[rectangle,text width=1.2cm,anchor=base] (B3) at (1,-2.0) {Voice/Mood};
+\node[rectangle,text width=1.2cm,anchor=base] (B4) at (1,-2.5) {Mood};
+\node[rectangle,text width=1.2cm,anchor=base] (B5) at (1,-3.0) {Politeness};
+\node[rectangle,text width=1.2cm,anchor=base] (B6) at (1,-3.5) {Tense/Aspect};
+\node[rectangle,text width=1.2cm,anchor=base] (B7) at (1,-4.0) {Polarity};
+\node[rectangle,text width=1.2cm,anchor=base] (B8) at (1,-4.5) {Finiteness};
 \draw[-] (A2.west) to (B3.east);
 \draw[-] (A5.west) to (B3.east);
 \draw[-] (A5.west) to (B4.east);
