--- a/figures/korean/comparison-opt-uni.tex
+++ b/figures/korean/comparison-opt-uni.tex
@@ -12,22 +12,19 @@ ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
 \node[rectangle,text width=1.2cm,anchor=base] (A4) at (4,-2.5) {Tense};
 \node[rectangle,text width=1.2cm,anchor=base] (A5) at (4,-3.0) {Mood};
 \node[rectangle,text width=1.2cm,anchor=base] (A6) at (4,-3.5) {Agreement};
-\node[rectangle,text width=1.2cm,anchor=base] (B1) at (1,-1.0) {DERIVATION};
-\node[rectangle,text width=1.2cm,anchor=base] (B2) at (1,-1.5) {TENSE/ASPECT};
-\node[rectangle,text width=1.2cm,anchor=base] (B3) at (1,-2.0) {POLITE};
-\node[rectangle,text width=1.2cm,anchor=base] (B4) at (1,-2.5) {UNKNOWN};
-\node[rectangle,text width=1.2cm,anchor=base] (B5) at (1,-3.0) {VALENCY};
-\node[rectangle,text width=1.2cm,anchor=base] (B6) at (1,-3.5) {AUXILIARY};
-\node[rectangle,text width=1.2cm,anchor=base] (B7) at (1,-4.0) {FORMALITY};
-\node[rectangle,text width=1.2cm,anchor=base] (B8) at (1,-4.5) {CASE};
-\node[rectangle,text width=1.2cm,anchor=base] (B9) at (1,-5.0) {HONORIFIC};
-\node[rectangle,text width=1.2cm,anchor=base] (B10) at (1,-5.5) {SYNTACTICMOOD};
-\node[rectangle,text width=1.2cm,anchor=base] (B11) at (1,-6.0) {PRAGMATICMOOD};
-\node[rectangle,text width=1.2cm,anchor=base] (B12) at (1,-6.5) {CONNECTOR};
-\node[rectangle,text width=1.2cm,anchor=base] (B13) at (1,-7.0) {NOMINALIZER};
+\node[rectangle,text width=1.2cm,anchor=base] (B1) at (1,-1.0) {Derivation};
+\node[rectangle,text width=1.2cm,anchor=base] (B2) at (1,-1.5) {Tense/Aspect};
+\node[rectangle,text width=1.2cm,anchor=base] (B3) at (1,-2.0) {Politeness};
+\node[rectangle,text width=1.2cm,anchor=base] (B4) at (1,-2.5) {Valence};
+\node[rectangle,text width=1.2cm,anchor=base] (B5) at (1,-3.0) {Formality};
+\node[rectangle,text width=1.2cm,anchor=base] (B6) at (1,-3.5) {Honorific};
+\node[rectangle,text width=1.2cm,anchor=base] (B7) at (1,-4.0) {Mood 1};
+\node[rectangle,text width=1.2cm,anchor=base] (B8) at (1,-4.5) {Mood 2};
+\node[rectangle,text width=1.2cm,anchor=base] (B9) at (1,-5.0) {Connector};
+\node[rectangle,text width=1.2cm,anchor=base] (B10) at (1,-5.5) {Nominal};
 \draw[-] (A3.west) to (B2.east);
 \draw[-] (A4.west) to (B2.east);
-\draw[-] (A1.west) to (B5.east);
-\draw[-] (A5.west) to (B10.east);
-\draw[-] (A5.west) to (B11.east);
+\draw[-] (A1.west) to (B4.east);
+\draw[-] (A5.west) to (B7.east);
+\draw[-] (A5.west) to (B8.east);
 \end{tikzpicture}
