--- a/figures/turkish_verbs/comparison-opt-uni.tex
+++ b/figures/turkish_verbs/comparison-opt-uni.tex
@@ -12,18 +12,18 @@ ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
 \node[rectangle,text width=1.2cm,anchor=base] (A4) at (4,-2.5) {Tense};
 \node[rectangle,text width=1.2cm,anchor=base] (A5) at (4,-3.0) {Mood};
 \node[rectangle,text width=1.2cm,anchor=base] (A6) at (4,-3.5) {Agreement};
-\node[rectangle,text width=1.2cm,anchor=base] (B1) at (1,-1.0) {VAL};
-\node[rectangle,text width=1.2cm,anchor=base] (B2) at (1,-1.5) {VOICE};
-\node[rectangle,text width=1.2cm,anchor=base] (B3) at (1,-2.0) {POLAR};
-\node[rectangle,text width=1.2cm,anchor=base] (B4) at (1,-2.5) {POLITE};
-\node[rectangle,text width=1.2cm,anchor=base] (B5) at (1,-3.0) {TAM1};
-\node[rectangle,text width=1.2cm,anchor=base] (B6) at (1,-3.5) {TAM2};
-\node[rectangle,text width=1.2cm,anchor=base] (B7) at (1,-4.0) {3PL};
-\node[rectangle,text width=1.2cm,anchor=base] (B8) at (1,-4.5) {Gen};
-\node[rectangle,text width=1.2cm,anchor=base] (B9) at (1,-5.0) {Vnoun};
-\node[rectangle,text width=1.2cm,anchor=base] (B10) at (1,-5.5) {NUMPERS};
-\node[rectangle,text width=1.2cm,anchor=base] (B11) at (1,-6.0) {MOOD};
-\node[rectangle,text width=1.2cm,anchor=base] (B12) at (1,-6.5) {Agr};
+\node[rectangle,text width=1.2cm,anchor=base] (B1) at (1,-1.0) {Valence};
+\node[rectangle,text width=1.2cm,anchor=base] (B2) at (1,-1.5) {Voice};
+\node[rectangle,text width=1.2cm,anchor=base] (B3) at (1,-2.0) {Polarity};
+\node[rectangle,text width=1.2cm,anchor=base] (B4) at (1,-2.5) {Politeness};
+\node[rectangle,text width=1.2cm,anchor=base] (B5) at (1,-3.0) {TAM 1};
+\node[rectangle,text width=1.2cm,anchor=base] (B6) at (1,-3.5) {TAM 2};
+\node[rectangle,text width=1.2cm,anchor=base] (B7) at (1,-4.0) {3Pl};
+\node[rectangle,text width=1.2cm,anchor=base] (B8) at (1,-4.5) {Genitive};
+\node[rectangle,text width=1.2cm,anchor=base] (B9) at (1,-5.0) {Nominal};
+\node[rectangle,text width=1.2cm,anchor=base] (B10) at (1,-5.5) {Possessor};
+\node[rectangle,text width=1.2cm,anchor=base] (B11) at (1,-6.0) {Mood};
+\node[rectangle,text width=1.2cm,anchor=base] (B12) at (1,-6.5) {Agreement};
 \draw[-] (A1.west) to (B1.east);
 \draw[-] (A2.west) to (B2.east);
 \draw[-] (A3.west) to (B5.east);
