--- a/figures/turkish_verbs/comparison.tex
+++ b/figures/turkish_verbs/comparison.tex
@@ -6,30 +6,30 @@ block/.style = {draw, fill=blue!30, align=center, anchor=west,
 ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
 \node[rectangle,text width=1.2cm,anchor=base] (A0) at (1,-0.3) {Real};
 \node[rectangle,text width=0.9cm,anchor=base] (B0) at (4,-0.3) {Optimized};
-\node[rectangle,text width=1.2cm,anchor=base] (A1) at (1,-1.0) {VAL};
-\node[rectangle,text width=1.2cm,anchor=base] (A2) at (1,-1.5) {VOICE};
-\node[rectangle,text width=1.2cm,anchor=base] (A3) at (1,-2.0) {POLAR};
-\node[rectangle,text width=1.2cm,anchor=base] (A4) at (1,-2.5) {POLITE};
-\node[rectangle,text width=1.2cm,anchor=base] (A5) at (1,-3.0) {MOOD};
-\node[rectangle,text width=1.2cm,anchor=base] (A6) at (1,-3.5) {TAM1};
-\node[rectangle,text width=1.2cm,anchor=base] (A7) at (1,-4.0) {3PL};
-\node[rectangle,text width=1.2cm,anchor=base] (A8) at (1,-4.5) {TAM2};
-\node[rectangle,text width=1.2cm,anchor=base] (A9) at (1,-5.0) {Vnoun};
-\node[rectangle,text width=1.2cm,anchor=base] (A10) at (1,-5.5) {Agr};
-\node[rectangle,text width=1.2cm,anchor=base] (A11) at (1,-6.0) {Gen};
-\node[rectangle,text width=1.2cm,anchor=base] (A12) at (1,-6.5) {NUMPERS};
-\node[rectangle,text width=1.2cm,anchor=base] (B1) at (4,-1.0) {VAL};
-\node[rectangle,text width=1.2cm,anchor=base] (B2) at (4,-1.5) {VOICE};
-\node[rectangle,text width=1.2cm,anchor=base] (B3) at (4,-2.0) {POLAR};
-\node[rectangle,text width=1.2cm,anchor=base] (B4) at (4,-2.5) {POLITE};
-\node[rectangle,text width=1.2cm,anchor=base] (B5) at (4,-3.0) {TAM1};
-\node[rectangle,text width=1.2cm,anchor=base] (B6) at (4,-3.5) {TAM2};
-\node[rectangle,text width=1.2cm,anchor=base] (B7) at (4,-4.0) {3PL};
-\node[rectangle,text width=1.2cm,anchor=base] (B8) at (4,-4.5) {Gen};
-\node[rectangle,text width=1.2cm,anchor=base] (B9) at (4,-5.0) {Vnoun};
-\node[rectangle,text width=1.2cm,anchor=base] (B10) at (4,-5.5) {NUMPERS};
-\node[rectangle,text width=1.2cm,anchor=base] (B11) at (4,-6.0) {MOOD};
-\node[rectangle,text width=1.2cm,anchor=base] (B12) at (4,-6.5) {Agr};
+\node[rectangle,text width=1.2cm,anchor=base] (A1) at (1,-1.0) {Valence};
+\node[rectangle,text width=1.2cm,anchor=base] (A2) at (1,-1.5) {Voice};
+\node[rectangle,text width=1.2cm,anchor=base] (A3) at (1,-2.0) {Polarity};
+\node[rectangle,text width=1.2cm,anchor=base] (A4) at (1,-2.5) {Politeness};
+\node[rectangle,text width=1.2cm,anchor=base] (A5) at (1,-3.0) {Mood};
+\node[rectangle,text width=1.2cm,anchor=base] (A6) at (1,-3.5) {TAM 1};
+\node[rectangle,text width=1.2cm,anchor=base] (A7) at (1,-4.0) {3Pl};
+\node[rectangle,text width=1.2cm,anchor=base] (A8) at (1,-4.5) {TAM 2};
+\node[rectangle,text width=1.2cm,anchor=base] (A9) at (1,-5.0) {Nominal};
+\node[rectangle,text width=1.2cm,anchor=base] (A10) at (1,-5.5) {Agreement};
+\node[rectangle,text width=1.2cm,anchor=base] (A11) at (1,-6.0) {Genitive};
+\node[rectangle,text width=1.2cm,anchor=base] (A12) at (1,-6.5) {Possessor};
+\node[rectangle,text width=1.2cm,anchor=base] (B1) at (4,-1.0) {Valence};
+\node[rectangle,text width=1.2cm,anchor=base] (B2) at (4,-1.5) {Voice};
+\node[rectangle,text width=1.2cm,anchor=base] (B3) at (4,-2.0) {Polarity};
+\node[rectangle,text width=1.2cm,anchor=base] (B4) at (4,-2.5) {Politeness};
+\node[rectangle,text width=1.2cm,anchor=base] (B5) at (4,-3.0) {TAM 1};
+\node[rectangle,text width=1.2cm,anchor=base] (B6) at (4,-3.5) {TAM 2};
+\node[rectangle,text width=1.2cm,anchor=base] (B7) at (4,-4.0) {3Pl};
+\node[rectangle,text width=1.2cm,anchor=base] (B8) at (4,-4.5) {Genitive};
+\node[rectangle,text width=1.2cm,anchor=base] (B9) at (4,-5.0) {Nominal};
+\node[rectangle,text width=1.2cm,anchor=base] (B10) at (4,-5.5) {Possessor};
+\node[rectangle,text width=1.2cm,anchor=base] (B11) at (4,-6.0) {Mood};
+\node[rectangle,text width=1.2cm,anchor=base] (B12) at (4,-6.5) {Agreement};
 \draw[->] (A1.east) to (B1.west);
 \draw[->] (A2.east) to (B2.west);
 \draw[->] (A3.east) to (B3.west);
