Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -1157,6 +1157,34 @@ We refer to \citep{Hahn2020modeling} for details.
 \end{enumerate}
 
 
+\subsection{Hungarian Nouns}
+
+% https://en.wiktionary.org/wiki/h%C3%A1z#Hungarian
+
+Possessed suffixes are very rare, occurring only three times in the training partition. 
+
+\begin{tabular}{lllllllllllll}
+%országokéhoz & ország &	Case=All|Number=Plur|Number[psed]=Sing|Number[psor]=None|Person[psor]=None \\
+%-ok-é-hoz \\
+%-Plural-PossessedSingular-Allative \\
+%országokéhoz &	ország&	Case=All|Number=Plur|Number[psed]=Sing|Number[psor]=None|Person[psor]=None	\\
+%kancellárénál&	kancellár &	Case=Ade|Number=Sing|Number[psed]=Sing \\
+lapunkat &	lap &	Case=Acc|Number=Sing|Number[psed]=None|Number[psor]=Plur|Person[psor]=1	\\
+unk-at \\
+érveiket	& érv &	Case=Acc|Number=Plur|Number[psed]=None|Number[psor]=Plur|Person[psor]=3 \\
+ei-k-et \\
+-Plural-Possessor3rdPlur-Accusative \\
+\end{tabular}
+
+\subsection{Turkish Nouns}
+
+\begin{tabular}{lllllllll}
+hareketlerimden	& hareket	& 	Case=Abl|Number=Plur|Number[psor]=Sing|Person=3|Person[psor]=1	\\
+ler-im-den \\
+Plural-1sgPoss-Ablative
+\end{tabular}
+
+
 
 \end{document}
 
