--- a/figures/hungarian_nouns/comparison.tex
+++ b/figures/hungarian_nouns/comparison.tex
@@ -7,15 +7,12 @@ ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
 \node[rectangle,text width=1.2cm,anchor=base] (A0) at (1,-0.3) {Real};
 \node[rectangle,text width=0.9cm,anchor=base] (B0) at (4,-0.3) {Optimized};
 \node[rectangle,text width=1.2cm,anchor=base] (A1) at (1,-1.0) {Number};
-\node[rectangle,text width=1.2cm,anchor=base] (A2) at (1,-1.5) {Psorperson};
-\node[rectangle,text width=1.2cm,anchor=base] (A3) at (1,-2.0) {Psornumber};
-\node[rectangle,text width=1.2cm,anchor=base] (A4) at (1,-2.5) {Case};
+\node[rectangle,text width=1.2cm,anchor=base] (A2) at (1,-1.5) {Possessor};
+\node[rectangle,text width=1.2cm,anchor=base] (A3) at (1,-2.0) {Case};
 \node[rectangle,text width=1.2cm,anchor=base] (B1) at (4,-1.0) {Number};
-\node[rectangle,text width=1.2cm,anchor=base] (B2) at (4,-1.5) {Psorperson};
-\node[rectangle,text width=1.2cm,anchor=base] (B3) at (4,-2.0) {Psornumber};
-\node[rectangle,text width=1.2cm,anchor=base] (B4) at (4,-2.5) {Case};
+\node[rectangle,text width=1.2cm,anchor=base] (B2) at (4,-1.5) {Possessor};
+\node[rectangle,text width=1.2cm,anchor=base] (B3) at (4,-2.0) {Case};
 \draw[->] (A1.east) to (B1.west);
 \draw[->] (A2.east) to (B2.west);
 \draw[->] (A3.east) to (B3.west);
-\draw[->] (A4.east) to (B4.west);
 \end{tikzpicture}
