--- a/figures/hungarian_verbs/comparison-opt-uni.tex
+++ b/figures/hungarian_verbs/comparison-opt-uni.tex
@@ -15,8 +15,8 @@ ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
 \node[rectangle,text width=1.2cm,anchor=base] (B1) at (1,-1.0) {Valence};
 \node[rectangle,text width=1.2cm,anchor=base] (B2) at (1,-1.5) {Tense};
 \node[rectangle,text width=1.2cm,anchor=base] (B3) at (1,-2.0) {Mood};
-\node[rectangle,text width=1.2cm,anchor=base] (B4) at (1,-2.5) {Agr};
-\node[rectangle,text width=1.2cm,anchor=base] (B5) at (1,-3.0) {Inf};
+\node[rectangle,text width=1.2cm,anchor=base] (B4) at (1,-2.5) {Agreement};
+\node[rectangle,text width=1.2cm,anchor=base] (B5) at (1,-3.0) {Nominal};
 \draw[-] (A1.west) to (B1.east);
 \draw[-] (A4.west) to (B2.east);
 \draw[-] (A5.west) to (B3.east);
