--- a/figures/hungarian_verbs/comparison.tex
+++ b/figures/hungarian_verbs/comparison.tex
@@ -9,13 +9,13 @@ ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
 \node[rectangle,text width=1.2cm,anchor=base] (A1) at (1,-1.0) {Valence};
 \node[rectangle,text width=1.2cm,anchor=base] (A2) at (1,-1.5) {Mood};
 \node[rectangle,text width=1.2cm,anchor=base] (A3) at (1,-2.0) {Tense};
-\node[rectangle,text width=1.2cm,anchor=base] (A4) at (1,-2.5) {Inf};
-\node[rectangle,text width=1.2cm,anchor=base] (A5) at (1,-3.0) {Agr};
+\node[rectangle,text width=1.2cm,anchor=base] (A4) at (1,-2.5) {Nominal};
+\node[rectangle,text width=1.2cm,anchor=base] (A5) at (1,-3.0) {Agreement};
 \node[rectangle,text width=1.2cm,anchor=base] (B1) at (4,-1.0) {Valence};
 \node[rectangle,text width=1.2cm,anchor=base] (B2) at (4,-1.5) {Tense};
 \node[rectangle,text width=1.2cm,anchor=base] (B3) at (4,-2.0) {Mood};
-\node[rectangle,text width=1.2cm,anchor=base] (B4) at (4,-2.5) {Agr};
-\node[rectangle,text width=1.2cm,anchor=base] (B5) at (4,-3.0) {Inf};
+\node[rectangle,text width=1.2cm,anchor=base] (B4) at (4,-2.5) {Agreement};
+\node[rectangle,text width=1.2cm,anchor=base] (B5) at (4,-3.0) {Nominal};
 \draw[->] (A1.east) to (B1.west);
 \draw[->] (A2.east) to (B3.west);
 \draw[->] (A3.east) to (B2.west);
