Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -1157,7 +1157,17 @@ We refer to \citep{Hahn2020modeling} for details.
 \end{enumerate}
 
 
-\subsection{Hungarian Nouns}
+\subsection{Nouns in Finnish. Hungarian, and Turkish}
+
+We illustrate noun suffixes using examples taken from the corpora, with the annotation given in UD and our segmentation.
+
+
+\begin{tabular}{lllllllll}
+juttuihisi& 	juttu	&	Case=Ill|Number=Plur|Number[psor]=Sing|Person[psor]=2 \\
+i-hi-si \\
+Plural-Illative-2SgPoss \\
+\end{tabular}
+
 
 % https://en.wiktionary.org/wiki/h%C3%A1z#Hungarian
 
@@ -1176,7 +1186,6 @@ ei-k-et \\
 -Plural-Possessor3rdPlur-Accusative \\
 \end{tabular}
 
-\subsection{Turkish Nouns}
 
 \begin{tabular}{lllllllll}
 hareketlerimden	& hareket	& 	Case=Abl|Number=Plur|Number[psor]=Sing|Person=3|Person[psor]=1	\\
