Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -408,7 +408,7 @@ Agreement           & Agreement & Agreement & Agreement & Agreement \\ \hline
     &
     \includegraphics[width=0.3\textwidth]{figures/hungarian_verbs/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
     \\
-    Korean & Japanese & Sesotho (prefixes) \\
+    \textsc{Korean} & \textsc{Japanese} & \textsc{Sesotho Prefixes} \\
     \includegraphics[width=0.3\textwidth]{figures/korean/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
     &
         \includegraphics[width=0.3\textwidth]{figures/japanese/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
@@ -557,7 +557,7 @@ Agreement           & Agreement & Agreement & Agreement & Agreement \\ \hline
   \include{figures/sesotho_suffixes/comparison-opt-uni}
     \end{minipage}
 \end{tabular}
-    \caption{Comparing optimized orders with the universal order described by \citep{bybee-morphology-1985} \mhahn{TODO I'll have to exclude rare categories like UNKNOWN from Korean.}. Note that, for Sesotho prefixes, inversion of order relative to the universal order is expected, as the universal order indicates distance from the root, not absolute position.}
+    \caption{Comparing optimized orders with the universal order described by \citep{bybee-morphology-1985}.  Note that, for Sesotho prefixes, inversion of order relative to the universal order is expected, as the universal order indicates distance from the root, not absolute position.}
     \label{fig:my_label}
 \end{figure}
 
@@ -930,7 +930,7 @@ Motive && \korean{하려고} \\
          &  & \korean{있+겠+다} & \korean{} & \korean{있+겠+어+요} & \korean{있+겠+습니다}\\
          &  & +ep+f             &           & paa+ep+ef+jxf & paa+ep+ef\\
     \end{tabular}
-    \caption{Conjugation of itda}
+    \caption{Conjugation of \textit{itda}. Refer to Table~\ref{tab:korean-hada-1} for details.}
     \label{tab:kroean-itda}
 \end{table}
 
@@ -956,24 +956,24 @@ In Figure~\ref{tab:turkish-yapmak}, we show how our segmentation corresponds to 
 \begin{tabular}{ll||llllllllllllll}
          &        & 1       & 2        & 3        & 1      & 2      & 3 \\ \hline\hline
  DNP & A & yaparım & yaparsın &  	yapar & yaparız & yaparsınız &  	yaparlar \\
-                    &  & -AR-IM & -AR-\textsc{si}$_3$N &  	-AR & -AR-IZ & -AR-\textsc{si}$_3$NIZ &  	-AR-LAR \\ \hline
+                    &  & -\textsc{ar}$_6$-\textsc{im}$_{10}$ & -\textsc{ar}$_6$-\textsc{sin}$_{10}$ &  	-\textsc{ar}$_6$ & -\textsc{ar}$_6$-\textsc{iz}$_{10}$ & -\textsc{ar}$_6$-\textsc{siniz}$_{10}$ &  	-\textsc{ar}$_6$-\textsc{lar}$_{7}$ \\ \hline
                 & I & yapıyorum & yapıyorsun & 	yapıyor &	yapıyoruz &	yapıyorsunuz &	yapıyorlar \\
-                &  & -IYOR-UM & -IYOR-SUN & 	-IYOR &	-IYOR-UZ &	-IYOR-\textsc{si}$_3$NIZ &	-IYOR-LAR \\ \hline
+                &  & -\textsc{iyor}$_6$-UM & -\textsc{iyor}$_6$-\textsc{sin}$_{10}$ & 	-\textsc{iyor}$_6$ &	-\textsc{iyor}$_6$-UZ &	-\textsc{iyor}$_6$-\textsc{siniz}$_{10}$ &	-\textsc{iyor}$_6$-\textsc{lar}$_{7}$ \\ \hline
                 & Pr  & yapacağım &	yapacaksın 	& yapacak 	& yapacağız &	yapacaksınız &	yapacaklar \\ 
-                &   & -ACAK-IM &	-ACAK-\textsc{si}$_3$N 	& -ACAK 	& -ACAK-IZ &	-ACAK-\textsc{si}$_3$NIZ &	-ACAK-LAR \\ \hline\hline
+                &   & -\textsc{acak}$_6$-IM &	-\textsc{acak}$_6$-\textsc{sin}$_{10}$ 	& -\textsc{acak}$_6$ 	& -\textsc{acak}$_6$-IZ &	-\textsc{acak}$_6$-\textsc{siniz}$_{10}$ &	-\textsc{acak}$_6$-\textsc{lar}$_{7}$ \\ \hline\hline
         DP    & Pe &yaptım &	yaptın &	yaptı &	yaptık &	yaptınız &	yaptılar \\
-              &  &-TI-IM &	-TI-\textsc{si}$_3$N &	-TI &	-TI-K &	-TI-\textsc{si}$_3$NIZ &	-TI-LAR \\ \hline
+              &  &-TI-IM &	-TI-\textsc{sin}$_{10}$ &	-TI &	-TI-K &	-TI-\textsc{siniz}$_{10}$ &	-TI-\textsc{lar}$_{7}$ \\ \hline
                 & I & yapıyordum &	yapıyordun &	yapıyordu &	yapıyorduk &	yapıyordunuz &	yapıyorlardı \\ 
-                &  & -IYOR-DU-IM &	-IYOR-DU-\textsc{si}$_3$N &	-IYOR-DU &	-IYOR-DU-K &	-IYOR-DU-\textsc{si}$_3$NIZ &	-IYOR-LAR-DU \\ \hline\hline
+                &  & -\textsc{iyor}$_6$-\textsc{du}$_8$-IM &	-\textsc{iyor}$_6$-\textsc{du}$_8$-\textsc{sin}$_{10}$ &	-\textsc{iyor}$_6$-\textsc{du}$_8$ &	-\textsc{iyor}$_6$-\textsc{du}$_8$-K &	-\textsc{iyor}$_6$-\textsc{du}$_8$-\textsc{siniz}$_{10}$ &	-\textsc{iyor}$_6$-\textsc{lar}$_{7}$-\textsc{du}$_8$ \\ \hline\hline
  I     & Pe & yapmışım &	yapmışsın &	yapmış &	yapmışız &	yapmışsınız &	yapmışlar \\
-       &  & -MIS-IM &	-MIS-\textsc{si}$_3$N &	-MIS &	-MIS-IZ &	-MIS-\textsc{si}$_3$NIZ &	-MIS-LAR \\ \hline
+       &  & -\textsc{mis}$_6$-IM &	-\textsc{mis}$_6$-\textsc{sin}$_{10}$ &	-\textsc{mis}$_6$ &	-\textsc{mis}$_6$-IZ &	-\textsc{mis}$_6$-\textsc{siniz}$_{10}$ &	-\textsc{mis}$_6$-\textsc{lar}$_{7}$ \\ \hline
                & A & yaparmışım &	yaparmışsın &	yaparmış &	yaparmışız &	yaparmışsınız& 	yaparlarmış \\ 
-            &  & -AR-MIS-IM &	-AR-MIS-\textsc{si}$_3$N &	-AR-MIS &	-AR-MIS-IZ &	-AR-MIS-\textsc{si}$_3$NIZ& 	-AR-LAR-MIS \\ \hline
+            &  & -AR-\textsc{mis}$_6$-IM &	-AR-\textsc{mis}$_6$-\textsc{sin}$_{10}$ &	-AR-\textsc{mis}$_6$ &	-AR-\textsc{mis}$_6$-IZ &	-AR-\textsc{mis}$_6$-\textsc{siniz}$_{10}$& 	-AR-\textsc{lar}$_{7}$-\textsc{mis}$_6$ \\ \hline
                & I & yapıyormuşum &	yapıyormuşsun &	yapıyormuş &	yapıyormuşuz &	yapıyormuşsunuz &	yapıyorlarmuş \\
-               &              & -IYOR-MUS-IM &	-IYOR-MUS-SUN &	-IYOR-MUS &	-IYOR-MUS-UZ &	-IYOR-MUS-SUNUZ &	-IYOR-LAR-MUS \\
+               &              & -IYOR-\textsc{mis}$_6$-IM &	-IYOR-\textsc{mis}$_6$-\textsc{sin}$_{10}$ &	-IYOR-\textsc{mis}$_6$ &	-IYOR-\textsc{mis}$_6$-UZ &	-IYOR-\textsc{mis}$_6$-SUNUZ &	-IYOR-\textsc{lar}$_{7}$-\textsc{mis}$_6$ \\
 \end{tabular}
 }
-\caption{Turkish}\label{tab:turkish-yapmak}
+\caption{Paradigm of the Turkish verb \textit{yapmak}. This paradigm covers TAM and agreement suffixes (Slots 6, 7, 8, 10).}\label{tab:turkish-yapmak}
 \end{table}
 
 \begin{table}
@@ -997,7 +997,7 @@ TAM1      & AR & Aorist, nonpast, direct \\
 \hline
 V Noun &  \\
 \hline
-3rd Plural& LAR & 3rd Plural\\
+3rd Plural& \textsc{lar}$_{7}$ & 3rd Plural\\
 \hline
 TAM2      & MUS2 & Aorist/Imperfective, indirect \\
           & DU & imperfective, past, direct \\
@@ -1067,7 +1067,7 @@ Agreement (Obj+Subj)         & EK & 1sg indefinite present\\
 Ind & Pres   &  I    & teszek &	teszel &	tesz &	teszünk &	tesztek &	tesznek \\
     &        &       & csinálok &	csinálsz &	csinál &	csinálunk &	csináltok &	csinálnak \\
    &&&  ismerek &	ismersz &	ismer &	ismerünk &	ismertek &	ismernek \\
- &    &      & -\textsc{ek} &	-\textsc{el} &	- &	-\textsc{unk} &	-\textsc{tek} &	-\textsc{nek} \\ \hline
+ &    &      & -\textsc{ek}$_5$ &	-\textsc{el}$_5$ &	- &	-\textsc{unk}$_5$ &	-\textsc{tek}$_5$ &	-\textsc{nek}$_5$ \\ \hline
    &&  D    & teszem &	teszed &	teszi &	tesszük &	teszitek &	teszik \\
    &&       & csinálom &	csinálod &	csinálja &	csináljuk &	csináljátok &	csinálják \\
   &&& ismerem &	ismered &	ismeri &ismerjük &	ismeritek &	ismerik \\
@@ -1076,7 +1076,7 @@ Ind & Pres   &  I    & teszek &	teszel &	tesz &	teszünk &	tesztek &	tesznek \\
 & Past &     I    &tettem &	tettél &	tett &	tettünk &	tettetek &	tettek \\
 &      &          & csináltam &	csináltál &	csinált &	csináltunk &	csináltatok &	csináltak \\
 &&&ismertem &	ismertél &	ismert &	ismertünk &	ismertetek &	ismertek \\
-	    &  &         &-\textsc{t}-EM &	-\textsc{t}-EL &	-T &	-\textsc{t}-UNK &	-\textsc{t}-TEK &	-\textsc{t}-\textsc{ek} \\ \hline
+	    &  &         &-\textsc{t}$_3$-EM &	-\textsc{t}$_3$-EL &	-T &	-\textsc{t}-UNK &	-\textsc{t}$_3$-TEK &	-\textsc{t}$_3$-\textsc{ek} \\ \hline
  & &   D    &tettem &	tetted &	tette &	tettük &	tettétek &	tették \\
  & &        & csináltam &	csináltad &	csinálta &	csináltuk &	csináltátok &	csinálták \\
 &&& ismertem &	ismerted &	ismerte &	ismertük &	ismertétek 	&ismerték \\
@@ -1085,18 +1085,18 @@ Ind & Pres   &  I    & teszek &	teszel &	tesz &	teszünk &	tesztek &	tesznek \\
 Cond  &Pres &   I    &tennék &	tennél &	tenne &	tennénk &	tennétek &	tennének \\
       &     &        & csinálnék &	csinálnál &	csinálna &	csinálnánk 	&csinálnátok &	csinálnának \\
   &&&    ismernék &	ismernél &	ismerne &	ismernénk &	ismernétek &	ismernének \\
-  & &   I    &-\textsc{n}-EK &	-\textsc{n}-EL &	-\textsc{n} &	-\textsc{n}-ENK &	-\textsc{n}-TEK &	-\textsc{n}-\textsc{nek} \\\hline
+  & &   I    &-\textsc{n}$_2$-EK &	-\textsc{n}$_2$-EL &	-\textsc{n}$_2$ &	-\textsc{n}$_2$-ENK &	-\textsc{n}$_2$-TEK &	-\textsc{n}$_2$-\textsc{nek} \\\hline
    &&  D    &tenném &	tennéd &	tenné &	tennénk &	tennétek &	tennék \\
    &&       & csinálnám &	csinálnád &	csinálná &	csinálnánk &	csinálnátok &	csinálnák \\
  &&&  ismerném &	ismernéd &	ismerné &	ismernénk 	&ismernétek &	ismernék \\
-&&      &-\textsc{n}-EM &	-\textsc{n}-ED &	-\textsc{n}-I &	-\textsc{n}-ENK &	-\textsc{n}-TEK &	-\textsc{n}-EK \\ \hline
+&&      &-\textsc{n}$_2$-EM &	-\textsc{n}$_2$-ED &	-\textsc{n}$_2$-I &	-\textsc{n}$_2$-ENK &	-\textsc{n}$_2$-TEK &	-\textsc{n}$_2$-EK \\ \hline
        &&  &tennélek \\ \hline
 Subj & Pres & I         &tegyek &	tégy or tegyél &	tegyen &	tegyünk &	tegyetek &	tegyenek \\
      &      &           & csináljak &	csinálj or
 csináljál &	csináljon &	csináljunk& 	csináljatok &	csináljanak \\
 &&&ismerjek &	ismerj or
 ismerjél &	ismerjen &	ismerjünk &	ismerjetek &	ismerjenek \\
- &  &          &-\textsc{j}-\textsc{ek} &	\textsc{j}-\textsc{el} &	-\textsc{j}-\textsc{en} &	-\textsc{j}-UNK &	-\textsc{j}-TEK &	-\textsc{j}-\textsc{nek} \\ \hline
+ &  &          &-\textsc{j}$_2$-\textsc{ek} &	\textsc{j}$_2$-\textsc{el} &	-\textsc{j}$_2$-\textsc{en} &	-\textsc{j}$_2$-UNK &	-\textsc{j}$_2$-TEK &	-\textsc{j}$_2$-\textsc{nek} \\ \hline
 &&D         &tegyem &	tedd or tegyed &	tegye &	tegyük& 	tegyétek &	tegyék \\
 &&          & csináljam &	csináld or
 csináljad &	csinálja &	csináljuk &	csináljátok &	csinálják \\
@@ -1159,39 +1159,54 @@ We refer to \citep{Hahn2020modeling} for details.
 
 \subsection{Nouns in Finnish. Hungarian, and Turkish}
 
-We illustrate noun suffixes using examples taken from the corpora, with the annotation given in UD and our segmentation.
+We illustrate noun suffixes using examples taken from the corpora, with the annotation given in UD and our segmentation, in Table~\ref{tab:noun-affixes-examples}.
+In addition to these three slots, Hungarian also has possessed suffixes, marked with \texttt{Number[psed]} in the data.
+However, this is rare in the data, occurring only three times in the training set, and was thus excluded.
 
-
+\begin{table}[]
+    \centering
 \begin{tabular}{lllllllll}
-juttuihisi& 	juttu	&	Case=Ill|Number=Plur|Number[psor]=Sing|Person[psor]=2 \\
-i-hi-si \\
-Plural-Illative-2SgPoss \\
+\multirow{5}{*}{\textsc{Finnish}} & Form & \textit{juttuihisi} \\
+ & Lemma & \textit{juttu} \\
+& Annotation & \texttt{Case=Ill|Number=Plur|Number[psor]=Sing|Person[psor]=2} \\
+& Segmentation & -\textsc{i}-\textsc{hi}-\textsc{si} \\
+& Gloss & Stem-Plural-Illative-2SgPoss \\
+\hline
+\multirow{5}{*}{\textsc{Hungarian}} & Form & \textit{érveiket} \\
+& Lemma & \textit{érv}  \\
+& Annotation &	\texttt{Case=Acc|Number=Plur|Number[psor]=Plur|Person[psor]=3} \\
+& Segmentation & -\textsc{ei}-\textsc{k}-\textsc{et} \\
+& Gloss & -Plural-Possessor3rdPlur-Accusative \\
+\hline
+\multirow{5}{*}{\textsc{Turkish}} & Form & \textit{hareketlerimden} \\
+& Lemma & \textit{hareket} \\
+& Annotation & 	\texttt{Case=Abl|Number=Plur|Number[psor]=Sing|Person=3|Person[psor]=1}	\\
+& Segmentation & -\textsc{lar}-\textsc{im}-\textsc{den} \\
+& Gloss & Plural-1sgPoss-Ablative\\
 \end{tabular}
+    \caption{Noun affixes in Finnish, Hungarian, and Turkish.}
+    \label{tab:noun-affixes-examples}
+\end{table}
+
 
 
 % https://en.wiktionary.org/wiki/h%C3%A1z#Hungarian
+%Re Hungarian: Possessed suffixes are very rare, occurring only three times in the training partition. 
 
-Possessed suffixes are very rare, occurring only three times in the training partition. 
-
-\begin{tabular}{lllllllllllll}
+%\begin{tabular}{lllllllllllll}
 %országokéhoz & ország &	Case=All|Number=Plur|Number[psed]=Sing|Number[psor]=None|Person[psor]=None \\
 %-ok-é-hoz \\
 %-Plural-PossessedSingular-Allative \\
 %országokéhoz &	ország&	Case=All|Number=Plur|Number[psed]=Sing|Number[psor]=None|Person[psor]=None	\\
 %kancellárénál&	kancellár &	Case=Ade|Number=Sing|Number[psed]=Sing \\
-lapunkat &	lap &	Case=Acc|Number=Sing|Number[psed]=None|Number[psor]=Plur|Person[psor]=1	\\
-unk-at \\
-érveiket	& érv &	Case=Acc|Number=Plur|Number[psed]=None|Number[psor]=Plur|Person[psor]=3 \\
-ei-k-et \\
--Plural-Possessor3rdPlur-Accusative \\
-\end{tabular}
+%lapunkat &	lap &	Case=Acc|Number=Sing|Number[psed]=None|Number[psor]=Plur|Person[psor]=1	\\
+%unk-at \\
+%érveiket	& érv &	Case=Acc|Number=Plur|Number[psed]=None|Number[psor]=Plur|Person[psor]=3 \\
+%ei-k-et \\
+%-Plural-Possessor3rdPlur-Accusative \\
+%\end{tabular}
 
 
-\begin{tabular}{lllllllll}
-hareketlerimden	& hareket	& 	Case=Abl|Number=Plur|Number[psor]=Sing|Person=3|Person[psor]=1	\\
-ler-im-den \\
-Plural-1sgPoss-Ablative
-\end{tabular}
 
 
 
