Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -826,7 +826,7 @@ Hortative   && \korean{하자}  & \korean{해}  & \korean{해요}  & \korean{합
    \hline
 Imperative  && \korean{해라, 하여라}  & \korean{해}  & \korean{해요}  & \korean{합시오}  \\
   && haera, hayeora &  hae &  haeyo &  hapsio \\
-  && -RA$_7$ & -\textsc{eo}$_7$ & -\textsc{eo}$_7$-\textsc{yo}$_8$ & -\textsc{p}$_5$-\textsc{si}$_3$O \\
+  && -\textsc{ra}$_7$ & -\textsc{eo}$_7$ & -\textsc{eo}$_7$-\textsc{yo}$_8$ & -\textsc{p}$_5$-\textsc{si}$_3$O \\
   && \korean{하+어라}, \korean{하+어라}  &  &    & \korean{+ㅂ시오} \\
   && pvg+ef,  pvg+ef                     &  &    &  +ef\\
   \hline
@@ -845,13 +845,13 @@ Assertive   && \korean{하겠다}  & \korean{하겠어}  & \korean{하겠어요}
            &          &Formal non-polite & Informal non-polite & Informal polite & Formal polite \\ \hline \hline
 Cause/Reason && \korean{해} & \korean{해서, 하여서} & \korean{하니} & \korean{하니까} \\
 && hae & haeseo, hayeoseo & hani & hanikka \\ 
-&& -\textsc{eo}$_7$ & -\textsc{eo}$_7$SEO$_9$ & -\textsc{ni}$_9$ & -\textsc{ni}KKA$_9$ \\
+&& -\textsc{eo}$_7$ & -\textsc{eoseo}$_9$ & -\textsc{ni}$_9$ & -\textsc{nikka}$_9$ \\
 && &\korean{하+어서, 하+어서} & \korean{하+니} & \korean{하+니까} \\
 && & pvg+ecs, xsm+ecs         & pvg+ecs & xsm+ef \\
 \hline
 Contrast && \korean{하지만} & \korean{하는데} & \korean{하더니} \\
  && hajiman & haneunde & haedoni & \\ 
- && -JIMAN$_9$ & -\textsc{neunde}$_9$ & -DEONI$_9$ & \\ \hline
+ && -\textsc{jiman}$_9$ & -\textsc{neunde}$_9$ & -\textsc{deoni}$_9$ & \\ \hline
 Conjunction && \korean{하고} \\
  && hago \\ 
 && -GO$_9$ \\ \hline
