Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -713,17 +713,17 @@ TODO
 %\label{ex:ophehela}
 
 
-Examples:
-\begin{tabular}{llllllllll}
-1    & 3 & 4     & 5   & 6  & 7 & 8 \\
-bara & sy & eots & eum & ni & da  & &  `wished'\\
-wish & Honorific & Past & Formal & Indicative & Indicative \\
-bara& & gess &  & &  eo & yo  &  `will wish' \\
-wish  & &  Assertive && & informal & polite \\
-\end{tabular}
+%Examples:
+%\begin{tabular}{llllllllll}
+%1    & 3 & 4     & 5   & 6  & 7 & 8 \\
+%bara & sy & eots & eum & ni & da  & &  `wished'\\
+%wish & Honorific & Past & Formal & Indicative & Indicative \\
+%bara& & gess &  & &  eo & yo  &  `will wish' \\
+%wish  & &  Assertive && & informal & polite \\
+%\end{tabular}
 
 
-Frequent morphemes:
+%Frequent morphemes:
 \begin{table}
 \resizebox{1.2\textwidth}{!}{
 \begin{tabular}{llllllllll}
@@ -753,8 +753,6 @@ Polite & \korean{요} & YO$_8$&	 267 & See Table~\ref{tab:korean-styles} \\
 }
 \caption{Frequent Korean verb suffixes in slots 1-8.}\label{tab:korean-frequent-morphemes}
 \end{table}
-
-Infinitive -eo: -eora/-ara for imperative \citep[4.3.6.4]{yeon2010korean}
 
 
 Next, we explain how our segmentation corresponds to commonly described paradigms.
