Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -657,6 +657,8 @@ non-concatenative morphology (in Arabic, k-t-b `to write' forms katab- `wrote'. 
 \section{Appendix}
 
 
+\subsection{Estimating Memory--Surprisal Tradeoffs}
+
 
 \subsection{Korean Verb Suffixes}
 
