--- a/figures/finnish_verbs/comparison-opt-uni.tex
+++ b/figures/finnish_verbs/comparison-opt-uni.tex
@@ -12,7 +12,7 @@ ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
 \node[rectangle,text width=1.2cm,anchor=base] (A4) at (4,-2.5) {Tense};
 \node[rectangle,text width=1.2cm,anchor=base] (A5) at (4,-3.0) {Mood};
 \node[rectangle,text width=1.2cm,anchor=base] (A6) at (4,-3.5) {Agreement};
-\node[rectangle,text width=1.2cm,anchor=base] (B1) at (1,-1.0) {Person.Number};
+\node[rectangle,text width=1.2cm,anchor=base] (B1) at (1,-1.0) {Agreement};
 \node[rectangle,text width=1.2cm,anchor=base] (B2) at (1,-1.5) {Voice};
 \node[rectangle,text width=1.2cm,anchor=base] (B3) at (1,-2.0) {Tense};
 \node[rectangle,text width=1.2cm,anchor=base] (B4) at (1,-2.5) {Mood};
